# plugin

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
include/plugin/: operating_system.hpp  plugin.hpp  plugin_bootstrap.hpp  plugin_manager.hpp
plugin/: operating_system.hpp  plugin.hpp  plugin_bootstrap.hpp  plugin_manager.hpp
sample/test_host/: main.cpp
test/: main.cpp
test_host/: main.cpp
test_interface/: my_plugin.hpp
